# texture-atlas

./: Cargo.toml  README.md  codecov.yaml  rustfmt.toml
.github/workflow/: rust.yml
.github/workflows/: build.yaml  coverage.yaml
cli/: Cargo.toml
cli-types/: Cargo.toml
cli-types/src/: lib.rs
cli/src/: generic.rs  main.rs
lib/src/: lib.rs
lib/src/base/: bin.rs  item.rs  mod.rs  options.rs  packer.rs  params.rs  rect.rs  score.rs
lib/src/builder/: dynamic.rs  mod.rs  single.rs  single_test.rs
lib/src/image/: bin.rs  ext.rs  item.rs  mod.rs  rect.rs
lib/src/packer/: mod.rs
lib/src/packer/binary/: mod.rs  node.rs  test.rs
lib/src/packer/common/: cmp.rs
lib/src/packer/generic/: mod.rs
lib/src/packer/passthrough/: mod.rs  test.rs
lib/src/packer/test/: mod.rs  overflow.rs  packer.rs  underflow.rs
lib/src/packer/uniform/: mod.rs  test.rs
lib/src/util/: mod.rs
main/: Cargo.toml
main/src/: lib.rs
main/src/base/: bin.rs  dynamic.rs  mod.rs  packer.rs  params.rs  rect.rs  score.rs  single.rs  single_test.rs
main/src/builder/: dynamic.rs  mod.rs  single.rs
main/src/image/: bin.rs
main/src/packer/: mod.rs
main/src/packer/binary/: mod.rs  test.rs
main/src/packer/common/: cmp.rs  mod.rs
main/src/packer/generic/: mod.rs
main/src/packer/passthrough/: mod.rs  test.rs
main/src/packer/test/: overflow.rs  packer.rs
main/src/packer/uniform/: mod.rs  test.rs
main/src/util/: img.rs
main/tests/: image.rs
src/: lib.rs
src/base/: bin.rs  builder.rs  dynamic.rs  mod.rs  options.rs  packer.rs  page.rs  params.rs  rect.rs  single_test.rs
src/image/: bin.rs  mod.rs  page.rs
src/packer/: mod.rs
src/packer/binary/: mod.rs  node.rs  test.rs
src/packer/passthrough/: mod.rs  test.rs
src/packer/test/: mod.rs  overflow.rs  packer.rs  underflow.rs
src/packer/uniform/: mod.rs  test.rs
src/util/: img.rs  img_test.rs  mod.rs
tests/: image.rs  tests.rs
