[workspace]
resolver = "3"
members = ["cli", "gen", "main"]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.6", features = ["derive"] }
image = { version = "0.25" }
imageproc = { version = "0.26.1" }
rand = { version = "0.10" }
