[workspace]
resolver = "3"
members = ["cli", "gen", "lib"]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = { version = "1.0.102" }
clap = { version = "4.6", features = ["derive"] }
env_logger = { version = "0.11" }
image = { version = "0.25" }
imageproc = { version = "0.26.1" }
log = { version = "0.4" }
rand = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.149" }
toml = { version = "1.1" }
