[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
image = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
texture-atlas = { path = "../main" }
toml = { workspace = true }
