[package]
name = "texture-atlas"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image = { workspace = true, optional = true }
imageproc = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = ["image", "serde"]
image = ["dep:image", "dep:imageproc"]
serde = ["dep:serde"]
